@@ -1,3 +1,8 @@
+2003-05-18  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem.c: (totem_create_full_path), (totem_action_open_files):
+	work-around another egg-recent bug wrt. local filenames
+
 2003-05-18  Julien MOUTTE  <julien@moutte.net>
 
 	* src/bacon-video-widget-gst.c: (bacon_video_widget_size_request),
